syntax = "proto3";

package valka.v1;

enum TaskStatus {
    TASK_STATUS_UNSPECIFIED = 0;
    TASK_STATUS_PENDING = 1;
    TASK_STATUS_DISPATCHING = 2;
    TASK_STATUS_RUNNING = 3;
    TASK_STATUS_COMPLETED = 4;
    TASK_STATUS_FAILED = 5;
    TASK_STATUS_RETRY = 6;
    TASK_STATUS_DEAD_LETTER = 7;
    TASK_STATUS_CANCELLED = 8;
}

enum LogLevel {
    LOG_LEVEL_UNSPECIFIED = 0;
    LOG_LEVEL_DEBUG = 1;
    LOG_LEVEL_INFO = 2;
    LOG_LEVEL_WARN = 3;
    LOG_LEVEL_ERROR = 4;
}

message Pagination {
    int32 page_size = 1;
    string page_token = 2;
}

message TaskMeta {
    string id = 1;
    string queue_name = 2;
    string task_name = 3;
    TaskStatus status = 4;
    int32 priority = 5;
    int32 max_retries = 6;
    int32 attempt_count = 7;
    int32 timeout_seconds = 8;
    string idempotency_key = 9;
    string input = 10;          // JSON string
    string metadata = 11;       // JSON string
    string output = 12;         // JSON string (from completed run)
    string error_message = 13;
    string scheduled_at = 14;   // RFC3339
    string created_at = 15;     // RFC3339
    string updated_at = 16;     // RFC3339
}
